hyplc-st-to-hp/IECSTGrammarParser.py
# Generated from IECSTGrammar.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class IECSTGrammarParser ( Parser ):

    grammarFileName = "IECSTGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PROGRAM'", "'END_PROGRAM'", "'CONFIGURATION'", 
                     "'END_CONFIGURATION'", "'RESOURCE'", "'ON'", "'END_RESOURCE'", 
                     "';'", "'TASK'", "'('", "'SINGLE'", "':='", "','", 
                     "'INTERVAL'", "'PRIORITY'", "')'", "'T'", "'#'", "'s'", 
                     "'ms'", "'us'", "'WITH'", "':'", "'VAR'", "'VAR_INPUT'", 
                     "'VAR_OUTPUT'", "'END_VAR'", "'IF'", "'THEN'", "'ELSIF'", 
                     "'ELSE'", "'END_IF'", "'OR'", "'XOR'", "'&'", "'AND'", 
                     "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'**'", "'NOT'", "'TRUE'", "'FALSE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Binary_literal", 
                      "Octal_literal", "Decimal_literal", "Pure_decimal_digits", 
                      "Hexadecimal_literal", "Floating_point_literal", "ID", 
                      "WS", "Block_comment", "ANY" ]

    RULE_configurationfile = 0
    RULE_program = 1
    RULE_configuration = 2
    RULE_resource_declaration = 3
    RULE_single_resource_declaration = 4
    RULE_task_configuration = 5
    RULE_task_initialization = 6
    RULE_interval_time = 7
    RULE_time_unit = 8
    RULE_program_configuration = 9
    RULE_var_block = 10
    RULE_type_rule = 11
    RULE_variable_declaration = 12
    RULE_program_block_body = 13
    RULE_statement_list = 14
    RULE_statement = 15
    RULE_assignment_statement = 16
    RULE_if_then_else_statement = 17
    RULE_variable = 18
    RULE_expression = 19
    RULE_xor_expression = 20
    RULE_and_expression = 21
    RULE_comparison = 22
    RULE_equ_expression = 23
    RULE_equ_operator = 24
    RULE_comparison_operator = 25
    RULE_add_expression = 26
    RULE_add_operator = 27
    RULE_term = 28
    RULE_multiply_operator = 29
    RULE_power_expression = 30
    RULE_unary_expression = 31
    RULE_unary_operator = 32
    RULE_primary_expression = 33
    RULE_literal = 34
    RULE_boolean_literal = 35
    RULE_numeric_literal = 36
    RULE_integer_literal = 37

    ruleNames =  [ "configurationfile", "program", "configuration", "resource_declaration", 
                   "single_resource_declaration", "task_configuration", 
                   "task_initialization", "interval_time", "time_unit", 
                   "program_configuration", "var_block", "type_rule", "variable_declaration", 
                   "program_block_body", "statement_list", "statement", 
                   "assignment_statement", "if_then_else_statement", "variable", 
                   "expression", "xor_expression", "and_expression", "comparison", 
                   "equ_expression", "equ_operator", "comparison_operator", 
                   "add_expression", "add_operator", "term", "multiply_operator", 
                   "power_expression", "unary_expression", "unary_operator", 
                   "primary_expression", "literal", "boolean_literal", "numeric_literal", 
                   "integer_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    Binary_literal=51
    Octal_literal=52
    Decimal_literal=53
    Pure_decimal_digits=54
    Hexadecimal_literal=55
    Floating_point_literal=56
    ID=57
    WS=58
    Block_comment=59
    ANY=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ConfigurationfileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(IECSTGrammarParser.ProgramContext,0)


        def configuration(self):
            return self.getTypedRuleContext(IECSTGrammarParser.ConfigurationContext,0)


        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_configurationfile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigurationfile" ):
                listener.enterConfigurationfile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigurationfile" ):
                listener.exitConfigurationfile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigurationfile" ):
                return visitor.visitConfigurationfile(self)
            else:
                return visitor.visitChildren(self)




    def configurationfile(self):

        localctx = IECSTGrammarParser.ConfigurationfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_configurationfile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.program()
            self.state = 77
            self.configuration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._var_block = None # Var_blockContext
            self.var_blocks = list() # of Var_blockContexts

        def program_block_body(self):
            return self.getTypedRuleContext(IECSTGrammarParser.Program_block_bodyContext,0)


        def ID(self):
            return self.getToken(IECSTGrammarParser.ID, 0)

        def var_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IECSTGrammarParser.Var_blockContext)
            else:
                return self.getTypedRuleContext(IECSTGrammarParser.Var_blockContext,i)


        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = IECSTGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(IECSTGrammarParser.T__0)
            self.state = 80
            localctx.name = self.match(IECSTGrammarParser.ID)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << IECSTGrammarParser.T__23) | (1 << IECSTGrammarParser.T__24) | (1 << IECSTGrammarParser.T__25))) != 0):
                self.state = 81
                localctx._var_block = self.var_block()
                localctx.var_blocks.append(localctx._var_block)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.program_block_body()
            self.state = 88
            self.match(IECSTGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConfigurationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(IECSTGrammarParser.ID, 0)

        def single_resource_declaration(self):
            return self.getTypedRuleContext(IECSTGrammarParser.Single_resource_declarationContext,0)


        def resource_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IECSTGrammarParser.Resource_declarationContext)
            else:
                return self.getTypedRuleContext(IECSTGrammarParser.Resource_declarationContext,i)


        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_configuration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfiguration" ):
                listener.enterConfiguration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfiguration" ):
                listener.exitConfiguration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfiguration" ):
                return visitor.visitConfiguration(self)
            else:
                return visitor.visitChildren(self)




    def configuration(self):

        localctx = IECSTGrammarParser.ConfigurationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_configuration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(IECSTGrammarParser.T__2)
            self.state = 91
            localctx.name = self.match(IECSTGrammarParser.ID)
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IECSTGrammarParser.T__8]:
                self.state = 92
                self.single_resource_declaration()
                pass
            elif token in [IECSTGrammarParser.T__4]:
                self.state = 93
                self.resource_declaration()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==IECSTGrammarParser.T__4:
                    self.state = 94
                    self.resource_declaration()
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

            self.state = 102
            self.match(IECSTGrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Resource_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.resource_type_name = None # Token

        def single_resource_declaration(self):
            return self.getTypedRuleContext(IECSTGrammarParser.Single_resource_declarationContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(IECSTGrammarParser.ID)
            else:
                return self.getToken(IECSTGrammarParser.ID, i)

        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_resource_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResource_declaration" ):
                listener.enterResource_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResource_declaration" ):
                listener.exitResource_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResource_declaration" ):
                return visitor.visitResource_declaration(self)
            else:
                return visitor.visitChildren(self)




    def resource_declaration(self):

        localctx = IECSTGrammarParser.Resource_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_resource_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(IECSTGrammarParser.T__4)
            self.state = 105
            localctx.name = self.match(IECSTGrammarParser.ID)
            self.state = 106
            self.match(IECSTGrammarParser.T__5)
            self.state = 107
            localctx.resource_type_name = self.match(IECSTGrammarParser.ID)
            self.state = 108
            self.single_resource_declaration()
            self.state = 109
            self.match(IECSTGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Single_resource_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def task_configuration(self):
            return self.getTypedRuleContext(IECSTGrammarParser.Task_configurationContext,0)


        def program_configuration(self):
            return self.getTypedRuleContext(IECSTGrammarParser.Program_configurationContext,0)


        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_single_resource_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_resource_declaration" ):
                listener.enterSingle_resource_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_resource_declaration" ):
                listener.exitSingle_resource_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_resource_declaration" ):
                return visitor.visitSingle_resource_declaration(self)
            else:
                return visitor.visitChildren(self)




    def single_resource_declaration(self):

        localctx = IECSTGrammarParser.Single_resource_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_single_resource_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.task_configuration()
            self.state = 112
            self.match(IECSTGrammarParser.T__7)
            self.state = 113
            self.program_configuration()
            self.state = 114
            self.match(IECSTGrammarParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Task_configurationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def task_initialization(self):
            return self.getTypedRuleContext(IECSTGrammarParser.Task_initializationContext,0)


        def ID(self):
            return self.getToken(IECSTGrammarParser.ID, 0)

        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_task_configuration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTask_configuration" ):
                listener.enterTask_configuration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTask_configuration" ):
                listener.exitTask_configuration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTask_configuration" ):
                return visitor.visitTask_configuration(self)
            else:
                return visitor.visitChildren(self)




    def task_configuration(self):

        localctx = IECSTGrammarParser.Task_configurationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_task_configuration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(IECSTGrammarParser.T__8)
            self.state = 117
            localctx.name = self.match(IECSTGrammarParser.ID)
            self.state = 118
            self.task_initialization()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Task_initializationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interval_time(self):
            return self.getTypedRuleContext(IECSTGrammarParser.Interval_timeContext,0)


        def Decimal_literal(self, i:int=None):
            if i is None:
                return self.getTokens(IECSTGrammarParser.Decimal_literal)
            else:
                return self.getToken(IECSTGrammarParser.Decimal_literal, i)

        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_task_initialization

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTask_initialization" ):
                listener.enterTask_initialization(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTask_initialization" ):
                listener.exitTask_initialization(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTask_initialization" ):
                return visitor.visitTask_initialization(self)
            else:
                return visitor.visitChildren(self)




    def task_initialization(self):

        localctx = IECSTGrammarParser.Task_initializationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_task_initialization)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(IECSTGrammarParser.T__9)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IECSTGrammarParser.T__10:
                self.state = 121
                self.match(IECSTGrammarParser.T__10)
                self.state = 122
                self.match(IECSTGrammarParser.T__11)
                self.state = 123
                self.match(IECSTGrammarParser.Decimal_literal)
                self.state = 124
                self.match(IECSTGrammarParser.T__12)


            self.state = 127
            self.match(IECSTGrammarParser.T__13)
            self.state = 128
            self.match(IECSTGrammarParser.T__11)
            self.state = 129
            self.interval_time()
            self.state = 130
            self.match(IECSTGrammarParser.T__12)
            self.state = 131
            self.match(IECSTGrammarParser.T__14)
            self.state = 132
            self.match(IECSTGrammarParser.T__11)
            self.state = 133
            self.match(IECSTGrammarParser.Decimal_literal)
            self.state = 134
            self.match(IECSTGrammarParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Interval_timeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Decimal_literal(self):
            return self.getToken(IECSTGrammarParser.Decimal_literal, 0)

        def time_unit(self):
            return self.getTypedRuleContext(IECSTGrammarParser.Time_unitContext,0)


        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_interval_time

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterval_time" ):
                listener.enterInterval_time(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterval_time" ):
                listener.exitInterval_time(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterval_time" ):
                return visitor.visitInterval_time(self)
            else:
                return visitor.visitChildren(self)




    def interval_time(self):

        localctx = IECSTGrammarParser.Interval_timeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_interval_time)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(IECSTGrammarParser.T__16)
            self.state = 137
            self.match(IECSTGrammarParser.T__17)
            self.state = 138
            self.match(IECSTGrammarParser.Decimal_literal)
            self.state = 139
            self.time_unit()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Time_unitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_time_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTime_unit" ):
                listener.enterTime_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTime_unit" ):
                listener.exitTime_unit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTime_unit" ):
                return visitor.visitTime_unit(self)
            else:
                return visitor.visitChildren(self)




    def time_unit(self):

        localctx = IECSTGrammarParser.Time_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_time_unit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << IECSTGrammarParser.T__18) | (1 << IECSTGrammarParser.T__19) | (1 << IECSTGrammarParser.T__20))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Program_configurationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.inst_name = None # Token
            self.task_name = None # Token
            self.prog_name = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(IECSTGrammarParser.ID)
            else:
                return self.getToken(IECSTGrammarParser.ID, i)

        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_program_configuration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_configuration" ):
                listener.enterProgram_configuration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_configuration" ):
                listener.exitProgram_configuration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_configuration" ):
                return visitor.visitProgram_configuration(self)
            else:
                return visitor.visitChildren(self)




    def program_configuration(self):

        localctx = IECSTGrammarParser.Program_configurationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_program_configuration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(IECSTGrammarParser.T__0)
            self.state = 144
            localctx.inst_name = self.match(IECSTGrammarParser.ID)
            self.state = 145
            self.match(IECSTGrammarParser.T__21)
            self.state = 146
            localctx.task_name = self.match(IECSTGrammarParser.ID)
            self.state = 147
            self.match(IECSTGrammarParser.T__22)
            self.state = 148
            localctx.prog_name = self.match(IECSTGrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.input = None
            self.output = None
            self.temp = None
            self._variable_declaration = None # Variable_declarationContext
            self.variables = list() # of Variable_declarationContexts

        def variable_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IECSTGrammarParser.Variable_declarationContext)
            else:
                return self.getTypedRuleContext(IECSTGrammarParser.Variable_declarationContext,i)


        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_var_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_block" ):
                listener.enterVar_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_block" ):
                listener.exitVar_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_block" ):
                return visitor.visitVar_block(self)
            else:
                return visitor.visitChildren(self)




    def var_block(self):

        localctx = IECSTGrammarParser.Var_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IECSTGrammarParser.T__23]:
                self.state = 150
                self.match(IECSTGrammarParser.T__23)
                pass
            elif token in [IECSTGrammarParser.T__24]:
                localctx.input = True 
                self.state = 152
                self.match(IECSTGrammarParser.T__24)
                pass
            elif token in [IECSTGrammarParser.T__25]:
                localctx.output = True 
                self.state = 154
                self.match(IECSTGrammarParser.T__25)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IECSTGrammarParser.ID:
                self.state = 157
                localctx._variable_declaration = self.variable_declaration()
                localctx.variables.append(localctx._variable_declaration)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 163
            self.match(IECSTGrammarParser.T__7)
            self.state = 164
            self.match(IECSTGrammarParser.T__26)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_type_rule

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SimpleTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IECSTGrammarParser.Type_ruleContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(IECSTGrammarParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleType" ):
                listener.enterSimpleType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleType" ):
                listener.exitSimpleType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleType" ):
                return visitor.visitSimpleType(self)
            else:
                return visitor.visitChildren(self)



    def type_rule(self):

        localctx = IECSTGrammarParser.Type_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_type_rule)
        try:
            localctx = IECSTGrammarParser.SimpleTypeContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            localctx.name = self.match(IECSTGrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variable_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self.names = list() # of Tokens
            self.var_type = None # Type_ruleContext

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(IECSTGrammarParser.ID)
            else:
                return self.getToken(IECSTGrammarParser.ID, i)

        def type_rule(self):
            return self.getTypedRuleContext(IECSTGrammarParser.Type_ruleContext,0)


        def getRuleIndex(self):
            return IECSTGrammarParser.RULE_variable_declaration
